...
        ) {
            StyledTextField(
                value = formData.name,
                onValueChange = { 
                    onFormDataChange(formData.copy(name = it))
                },
                label = "Collection Name",
                icon = Icons.Outlined.Title,
                keyboardOptions = KeyboardOptions(
                    imeAction = ImeAction.Next
                )
            )
            
...
